# halinaiclassroom

./: .gitignore  AGENTS.md  README.md  package.json
.github/workflows/: release.yml
docs/: installation_guide.md  installation_guide_vi.md  installation_guide_win.md  installation_guide_win_vi.md
scripts/: release.ps1
src/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/audio/: wasapi.rs
src-tauri/src/commands/: audio.rs  halin_http.rs  mod.rs  session_recording.rs  transcript.rs
src/js/: app.js  config.js  halin-auth.js  halin-chunk-queue.js  halin-classroom.js  halin-client.js  halin-fetch.js  logger.js  settings.js  soniox.js  ui.js
src/styles/: app-shell.css  main.css
