[package]
name = "halin-platform"
version = "0.7.1"
description = "HaLin AI Platform — HanoiLink"
authors = ["HanoiLink"]
edition = "2021"

[lib]
name = "halin_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
cpal = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
http = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "time"] }

# macOS: ScreenCaptureKit for system audio
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
screencapturekit = "1.5"

# Windows: WASAPI for system audio (ALAC + legacy loopback)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "implement",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
] }
windows-core = "0.58"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
